# libcoap

./: .gitignore  Makefile.am  coap_config.h.contiki  configure.ac  libcoap-1.map  libcoap-1.sym
examples/: Makefile.am  client.c  coap-client-mod.c  coap-rd.c  coap_rd.h  mjson.c  mjson.h  pcp.conf  pcp_client.c  pcp_client.h
include/coap/: address.h  group.h  lifetime.h  lwippools.h  mem.h  net.h  pcp_client.h  pdu.h  resource.h  subscribe.h  utlist.h
src/: coap_io.c  group.c  lifetime.c  mem.c  net.c  pcp_client.c  pdu.c  resource.c
